[package]
name = "reclaim"
description = "trait-based abstract interface for memory reclamation"
version = "0.1.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[features]
default = []

# Must be enabled for use in no_std crates
no-std = []

[dependencies]
memoffset = "0.2.1"
typenum = "1.10.0"
