[package]
name = "reclaim"
description = "trait-based abstract interface for memory reclamation"
version = "0.2.2"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/reclaim.git"
documentation = "https://docs.rs/reclaim"
keywords = ["concurrent", "lock-free", "memory", "reclamation", "dynamic"]
edition = "2018"
exclude = ["/.travis.yml", "TODOS.md"]

[features]
default = ["std"]

# must be disabled for use in no_std crates
std = []

[dependencies]
memoffset = "0.5.1"
typenum = "1.10.0"

[dev-dependencies]
matches = "0.1.8"
